fix contrast issue

--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -584,7 +584,7 @@ p {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
-  background-color: #E9DAC1;
+  background-color: #F7ECDE;
 }
 
 .page-content {
